Fixed game layout and logic, added turn indicator and win detection

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tic Tac Toe Game</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="game.js"></script>
-
     <h1>Tic Tac Toe</h1>
+    <div id="turn-indicator">Player O's turn</div>
     <div class="container">
       <div class="game">
         <button class="box"></button>
@@ -23,6 +22,11 @@
         <button class="box"></button>
       </div>
     </div>
-    <button id="reset-btn">Reset Game</button>
+    <div class="controls">
+      <button id="reset-btn">Reset Game</button>
+      <button class="newgame">New Game</button>
+    </div>
+    <div id="msg"></div>
+    <script src="game.js"></script>
   </body>
 </html>
